--- a/css/style.css
+++ b/css/style.css
@@ -258,7 +258,7 @@ z-index: -1;
   width: 200px;
   height: 200px;
   right:5%;
-  bottom: 8rem;
+  top: 70%;
   
   background: #254D4D;
   border-radius: 5px;
