--- a/css/testimonial.css
+++ b/css/testimonial.css
@@ -4,7 +4,14 @@
 }
 .box-area {
 	padding: 30px;
-	position: relative;
+	display: block;
+	background: #254D4D;
+	color: #000;
+	box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+	margin: 40px 0;
+}
+.box-area-2{
+	padding: 30px;
 	display: block;
 	background: #fff;
 	color: #000;
@@ -14,9 +21,10 @@
 .box-area h5 {
 	font-size: 16px;
 	font-weight: 700;
-	color: #254D4D;
-	margin-top: 30px;
-	margin-bottom: 5px;
+    font-style: italic;
+	color: #fff;
+	margin-top: 5px;
+	margin-bottom: 30px;
 	text-transform: uppercase;
 	letter-spacing: 1px;
 }
@@ -28,12 +36,11 @@
 	font-weight: 400;
 }
 .box-area .content {
-	color: #262626;
+	color: #fff;
 }
 .box-area .img-area {
 	width: 90px;
 	height: 90px;
-	position: absolute;
 	top: -40px;
 	left: 0;
 	bottom: 0;
