--- a/new/website-menu-08/css/style.css
+++ b/new/website-menu-08/css/style.css
@@ -1,10 +1,9 @@
 body {
   font-family: "Quicksand", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  background-color: #fff;
+  background-color: #EEF9F1;
   /* height: 200vh; */
   position: relative;
 }
-
 body:before {
   content: "";
   position: absolute;
@@ -219,7 +218,6 @@ header .navbar .cta-btn a:hover {
   padding-top: 40%;
   font-size: 4vw;
   font-weight: 600;
-  font-family: Arial, Helvetica, sans-serif;
 }
 
 
@@ -228,7 +226,6 @@ header .navbar .cta-btn a:hover {
   font-weight: bolder;
   font-size: 5vw;
   padding-top: 2rem;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   
 }
 
@@ -255,7 +252,6 @@ header .navbar .cta-btn a:hover {
     font-weight: bolder;
     font-size: 3rem;
     padding-top: 2rem;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     
   }
 
@@ -273,7 +269,6 @@ header .navbar .cta-btn a:hover {
     font-weight: bolder;
     font-size: 7vw;
     padding-top: 2rem;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     
   }
 }
@@ -306,7 +301,6 @@ header .navbar .cta-btn a:hover {
     font-weight: bolder;
     font-size: 5vw;
     padding-top: 2rem;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     
   }
 }
@@ -321,7 +315,6 @@ header .navbar .cta-btn a:hover {
     font-weight: bolder;
     font-size: 5vw;
     padding-top: 2rem;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     
   }
 }
