--- a/old/css/style.css
+++ b/old/css/style.css
@@ -223,12 +223,171 @@ header .navbar .cta-btn a:hover {
   border-radius: 5px;
 }
 
+/* ----*--------------*------------*------------*------------*------------*---------------*-----------*----------*-----------*---------* */
+
+/* ----*--------------*------------*------------*------------*------------*---------------*-----------*----------*-----------*---------* */
 
 
 
+.extraordinary-heading {
+  color: #fff;
+  padding-top: 40%;
+  font-size: 4vw;
+  font-weight: 600;
+}
+
+
+.second-para-title-style {
+  text-align: center;
+  font-weight: bolder;
+  font-size: 5vw;
+  padding-top: 2rem;
+  
+}
+
+
+.second-para-style {
+  text-align: center;
+  font-weight: normal;
+  color: #000;
+  width: 80%;
+  font-size: 1.5rem;
+}
 
 
 
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (min-width: 300px) {
+  .extraordinary-heading {
+    font-size: 8vw;
+    padding-top: 60%;
+  }
+
+  .second-para-title-style {
+    text-align: center;
+    font-weight: bolder;
+    font-size: 3rem;
+    padding-top: 2rem;
+    
+  }
+
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+  .extraordinary-heading {
+    font-size: 6vw;
+    padding-top: 40%;
+  }
+
+  .second-para-title-style {
+    text-align: center;
+    font-weight: bolder;
+    font-size: 7vw;
+    padding-top: 2rem;
+    
+  }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+  .extraordinary-heading {
+    font-size: 4vw;
+    padding-top: 40%;
+  }
+  
+  .second-para-title-style {
+    text-align: center;
+    font-weight: bolder;
+    font-size: 5vw;
+    padding-top: 2rem;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    
+  }
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+  .extraordinary-heading {
+    font-size: 4vw;
+    padding-top: 40%;
+  }
+  .second-para-title-style {
+    text-align: center;
+    font-weight: bolder;
+    font-size: 5vw;
+    padding-top: 2rem;
+    
+  }
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+  .extraordinary-heading {
+    font-size: 4vw;
+  }
+  .second-para-title-style {
+    text-align: center;
+    font-weight: bolder;
+    font-size: 5vw;
+    padding-top: 2rem;
+    
+  }
+}
+
+
+
+/* ----*--------------*------------*------------*------------*------------*---------------*-----------*----------*-----------*---------* */
+
+/* ----*--------------*------------*------------*------------*------------*---------------*-----------*----------*-----------*---------* */
+
+
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) and (min-width: 300px ) {
+  .Margin-bottom-for-mobile {
+    margin-bottom: 60%;
+  }
+  .Rectangle-top-left{
+    left:5%;
+    top: 24% !important;
+    }
+    
+    .Rectangle-bottom-right{
+      right:5%;
+      top: 80% !important;
+    }
+    .Rectangle-buy-home{
+      width: 264px !important;
+    height: 201px !important;
+    left: 7% !important;
+    }
+    .mobile-marign-top{
+      margin-top: 2rem;
+      margin-bottom: 2rem;
+    }
+}
+@media only screen and (max-width: 767px){
+  .owl-nav {
+      display: block !important;
+  }
+
+}
+
+@media only screen and (max-width: 991px){
+.owl-nav {
+    display: block !important;
+}
+}
+
+#testimonial_area .owl-prev {
+  left: -2vw !important;
+  /* background-color: transparent !important; */
+}
+#testimonial_area .owl-next {
+    right: -2vw !important;
+  /* background-color: transparent !important; */
+}
 .form-control-borderless {
   border: none;
 }
@@ -252,7 +411,16 @@ header .navbar .cta-btn a:hover {
   }
   
 
-
+.Rectangle-contact{
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  left:-3%;
+  top: -5%;
+  
+  background: #254D4D !important;
+  border-radius: 5px;
+}
 .Rectangle-top-left{
 position: absolute;
 width: 200px;
